# Rubiks-Cube-Solver-CPP

./: CMakeLists.txt  README.md  a.out  callgrind.out.3311  cpprestserver  cpprestserver.cpp  cubiecube.h  facecube.cpp  gmon.out  hello.js  hello.wasm  idaStarCross.cpp  idaStarCross.h  idaStarF2l.cpp  idaStarF2l.h  idaStarOLL.cpp  solver_common.cpp  tableloader.cpp  tableloader.h  test.cpp
heuristics/: heuristicsJson0.csv  heuristicsJson01.csv  heuristicsJson012.csv  heuristicsJson013.csv  heuristicsJson02.csv  heuristicsJson023.csv  heuristicsJson03.csv  heuristicsJson1.csv  heuristicsJson10.csv  heuristicsJson1011.csv  heuristicsJson11.csv  heuristicsJson12.csv  heuristicsJson123.csv  heuristicsJson13.csv  heuristicsJson2.csv  heuristicsJson23.csv  heuristicsJson3.csv  heuristicsJson8.csv  heuristicsJson810.csv  heuristicsJson81011.csv  heuristicsJson811.csv  heuristicsJson89.csv  heuristicsJson8910.csv  heuristicsJson8911.csv  heuristicsJson9.csv  heuristicsJson910.csv  heuristicsJson91011.csv  heuristicsJson911.csv  heuristicsJsonCornerOLL.csv  heuristicsJsonEdgeOLL.csv
include/: idaStarCross.h  pieces.h  solver_common.h  tableloader.h
src/: cpprestserver.cpp  cubiecube.cpp  idaStarCross.cpp  idaStarF2l.cpp
v2/: cubiecube.cpp  facecube.h  generateHeuristics.cpp  pieces.h
